# bento

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
Casks/: bento.rb
Formula/: bento.rb
hooks/: install.sh  pre-commit
scripts/: generate_icons.sh
src/: error.rs  lib.rs  main.rs
src/atlas/: atlas.rs  builder.rs  mod.rs  types.rs
src/cli/: args.rs  mod.rs
src/config/: load.rs  mod.rs  save.rs  types.rs
src/gui/: app.rs  dialogs.rs  mod.rs  state.rs  thumbnail.rs
src/gui/panels/: input.rs  mod.rs  preview.rs  settings.rs
src/output/: format.rs  godot.rs  json.rs  mod.rs  tpsheet.rs
src/packing/: maxrects.rs  mod.rs  rect.rs
src/sprite/: loader.rs  mod.rs  resizer.rs  trimmer.rs  types.rs
