[package]
name = "bento"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Texture packer for Godot 4.x"
license = "MIT"

[features]
default = []
gui = ["dep:eframe", "dep:egui_extras", "dep:rfd"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
glob = "0.3"
oxipng = { version = "9", default-features = false, features = ["parallel", "zopfli"] }

# GUI dependencies (optional)
eframe = { version = "0.30", optional = true, features = ["persistence"] }
egui_extras = { version = "0.30", optional = true, features = ["image"] }
rfd = { version = "0.15", optional = true }

[lints.clippy]
# Unsafe code documentation
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

# Fallible operations
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"

# Debug leftovers
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Numeric safety
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"

# Error handling
map_err_ignore = "warn"

[lints.rust]
unsafe_code = "warn"
