[package]
name = "bento"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "Texture packer for Godot 4.x"
license = "MIT"

[features]
default = []
gui = ["dep:eframe", "dep:egui_extras", "dep:rfd"]

[package.metadata.packager]
product_name = "Bento"
identifier = "io.github.d6e.bento"
categories = ["Graphics", "Development"]

[package.metadata.packager.desktop]
name = "Bento"
comment = "Sprite atlas packer for Godot 4.x"
exec = "bento"
icon = "bento"
terminal = false
type = "Application"
categories = "Graphics;Development;"
mime_type = "image/png;"

[package.metadata.packager.icons]
"dist/icons/16x16.png" = { target = "16x16" }
"dist/icons/32x32.png" = { target = "32x32" }
"dist/icons/48x48.png" = { target = "48x48" }
"dist/icons/64x64.png" = { target = "64x64" }
"dist/icons/128x128.png" = { target = "128x128" }
"dist/icons/256x256.png" = { target = "256x256" }
"dist/icons/512x512.png" = { target = "512x512" }
"dist/icons/bento.icns" = { target = "macos" }

[package.metadata.packager.deb]
depends = ["libxcb-render0", "libxcb-shape0", "libxcb-xfixes0", "libxkbcommon0", "libgtk-3-0"]
section = "graphics"
priority = "optional"

[package.metadata.packager.macos]
minimum_system_version = "10.13"
frameworks = []

[package.metadata.packager.dmg]
window_size = { width = 600, height = 400 }
app_position = { x = 180, y = 170 }
application_folder_position = { x = 420, y = 170 }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
glob = "0.3"
oxipng = { version = "9", default-features = false, features = ["parallel", "zopfli"] }

# GUI dependencies (optional)
eframe = { version = "0.30", optional = true, features = ["persistence"] }
egui_extras = { version = "0.30", optional = true, features = ["image"] }
rfd = { version = "0.15", optional = true }

[lints.clippy]
# Unsafe code documentation
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

# Fallible operations
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"

# Debug leftovers
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Numeric safety
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"

# Error handling
map_err_ignore = "warn"

[lints.rust]
unsafe_code = "warn"
